foo-corp/cluster/cis-prohibit-wildcard-role.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sProhibitRoleWildcardAccess
metadata:
  name: cis-prohibit-wildcard-role
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Role"]
    namespaces:
      - "demo"
