foo-corp/cluster/constraint-general-container-limits.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerLimits
metadata:
  name: container-must-have-limits
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "demo"        
  parameters:
    cpu: "200m"
    memory: "2Gi"
