foo-corp/cluster/constraint-general-required-labels.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: must-have-req-labels
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "demo"          
  parameters:
    message: "All Pods must have an app and component label"
    labels:
      - key: app
      - key: component
