foo-corp/cluster/network-allow-internal-lb-only.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNoExternalServices
metadata:
  #Ensures - All LoadBalancer type resources must have Internal annotation
  name: network-allow-internal-lb-only
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["LoadBalancer"]
    namespaces:
      - "demo"
