foo-corp/cluster/network-https-only.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sHttpsOnly
metadata:
  #Ensures - kubernetes.io/ingress.allow-http=false
  name: network-allow-https-only
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "demo"
